# just_another_config_language

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pylint.yml  test.yml
jacl/: __init__.py  main.py
tests/: test_jacl_unit.py  test_lex_unit.py
tests/resources/: test.jacl
