[tool.poetry]
name = "jacl"
version = "0.1.0"
description = ""
authors = ["Dylan Petzko <petzkod@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
